<resources>
    <string name="app_name">Car Companion</string>
    <string name="logo_icon_description">logo_icon</string>
    <string name="logo_text_description">@string/app_name</string>
    <string name="title_fuel">Fuel</string>
    <string name="title_garage">Garage</string>
    <string name="title_events">Events</string>
    <string name="newVehicle_type">Type:</string>
    <string name="newVehicle_identification">Identification</string>
    <string name="newVehicle_details">Details</string>
    <string name="newVehicle_characteristics">Caracteristici</string>
    <string name="vehicle_dataTile_title">Date generale</string>
    <string name="vehicle_dataTile_makeText">Marcă</string>
    <string name="defaultValue">notset</string>
    <string name="vehicle_dataTile_modelText">Model</string>
    <string name="vehicle_dataTile_engineText">Motor</string>
    <string name="vehicle_dataTile_vinText">Serie șasiu</string>
    <string name="vehicle_dataTile_odometerText">Odometru</string>
    <string name="vehicle_documentsTile_title">Documente</string>
    <string name="garage_contextmenu_delete">Șterge vehicul</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>
    <string name="delete_WarningTitle">
        Esti sigur?
    </string>
    <string name="garage_deleteVehicleWarningMessage">
        Acest proces este ireversibil si presupune stergerea tuturor datelor legate de vehicul.
    </string>
    <string name="garage_deleteVehicleConfirmation">Vehicul eliminat.</string>
    <string name="plateNumber_placeholder">XX XX XXX</string>
    <string name="vehicle_addOdometerEntry"><u>Adauga intrare</u></string>
    <string name="vehicle_viewOdometerHistory"><u>Vezi istoric</u></string>datePlaceholder
    <string name="datePlaceholder">01-01-1970</string>
    <string name="vehicle_addOdometerValue">Valoare:</string>
    <string name="vehicle_addOdometerDate">Data:</string>
    <string name="vehicle_addOdometerEntryConfirmation">Intrare adaugată cu succes.</string>
    <string name="error_emptyField">Campul nu poate fi liber.</string>error_invalidField
    <string name="error_invalidField">Campul este invalid.</string>
    <string name="odometerHistory_title">Istoric Odometru</string>
    <string name="unknownText">UNKNOWN</string>
    <string name="error_noOdometerData">Vehiculul nu are date date salvate despre odometru.</string>
    <string name="day">zi</string>
    <string name="week">săpt.</string>
    <string name="month">lună</string>
    <string name="year">an</string>
    <string name="rv_odometerHistory_entriesTitle">Intrări</string>
    <string name="chartType_cumulative">cumulativ</string>
    <string name="chartType_growth">creștere</string>
    <string name="odometerHistory_contextmenu_delete">Șterge intrare</string>
    <string name="odometerHistory_deleteEntryWarningMessage">
        Acest proces este ireversibil și presupune stergerea intrării de odometru.
    </string>
    <string name="delete_odometerHistoryConfirmation">Intrare ștearsă cu succes.</string>
</resources>