<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/gray_100">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:background="@color/gray_100">

        <TextView
            android:id="@+id/tv_odometerHistory_plateNumber"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow"
            android:textColor="?titleTextColor"
            android:textSize="50sp"
            android:gravity="center_horizontal"
            android:text="@string/plateNumber_placeholder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"

            android:paddingTop="10dp"
            android:layout_marginTop="@dimen/tileMarginVertical">

            <TextView
                android:id="@+id/tv_vehicle_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/tilePaddingHorizontal"

                android:text="@string/odometerHistory_title"
                android:textSize="@dimen/tileTitleFontSize"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_600"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="@dimen/tilePaddingHorizontal"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/tilePaddingHorizontal">

                <TextView
                    android:id="@+id/tv_odometerHistory_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/spinner_odometerHistory_type"
                    app:layout_constraintBottom_toBottomOf="@id/spinner_odometerHistory_type"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="Tip:"/>
                <Spinner
                    android:id="@+id/spinner_odometerHistory_type"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_odometerHistory_type"
                    app:layout_constraintStart_toStartOf="@id/spinner_odometerHistory_granularity"/>

                <TextView
                    android:id="@+id/tv_odometerHistory_granularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/spinner_odometerHistory_granularity"
                    app:layout_constraintBottom_toBottomOf="@id/spinner_odometerHistory_granularity"

                    android:text="Unitate" />

                <Spinner
                    android:id="@+id/spinner_odometerHistory_granularity"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"

                    app:layout_constraintLeft_toRightOf="@id/tv_odometerHistory_granularity"
                    app:layout_constraintTop_toBottomOf="@id/spinner_odometerHistory_type"

                    android:paddingStart="30dp"/>

                <Button
                    android:id="@+id/bt_odometerHistory_confirmGranularity"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_confirm"

                    app:layout_constraintTop_toTopOf="@id/spinner_odometerHistory_type"
                    app:layout_constraintBottom_toBottomOf="@id/spinner_odometerHistory_granularity"
                    app:layout_constraintLeft_toRightOf="@id/spinner_odometerHistory_granularity"
                    android:layout_marginLeft="20dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <com.anychart.AnyChartView
                    android:id="@+id/columnChart_odometer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <com.anychart.AnyChartView
                    android:id="@+id/lineChart_odometer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/tilePaddingHorizontal"
                android:text="@string/rv_odometerHistory_entriesTitle"
                android:textSize="@dimen/tileTitleFontSize"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_odometerHistory_entries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/tilePaddingHorizontal"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>